--- a/XE.LibFun/DevExpress_zh.ini
+++ b/XE.LibFun/DevExpress_zh.ini
@@ -134,7 +134,7 @@ cxSFilterControlDialogOpenDialogCaption="打开过滤方案"
 cxSFilterControlDialogSaveDialogCaption="保存过滤方案"
 cxSFilterControlNullString="<空>"
 cxSFilterDialogCaption="自定义过滤"
-cxSFilterDialogCharactersSeries="代表任意字符序列"
+cxSFilterDialogCharactersSeries="代表任意字符"
 cxSFilterDialogInvalidValue="无效值"
 cxSFilterDialogOperationAnd="并且"
 cxSFilterDialogOperationOr="或者"
