+.添加UThreadPool.TThreadWorkerConfig.FAutoDelete执行完毕后删除. +.添加UDBManager支持多种(ADO,FireDAC,uniDAC)数据库驱动. -.删除UDBManager与ADO相关的代码. +.添加UDBDriverADO驱动.

--- a/Demo/DBPool/DBPool.dproj
+++ b/Demo/DBPool/DBPool.dproj
@@ -134,7 +134,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\DBPool.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\Bin\DBPool.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>DBPool.exe</RemoteName>
                         <Overwrite>true</Overwrite>
