*.优化UParameters.TParameterManager,由于参数项信息会多次使用,默认加载全部参数项.

--- a/Demo/Params/Params.dproj
+++ b/Demo/Params/Params.dproj
@@ -106,7 +106,6 @@
         </DelphiCompile>
         <DCCReference Include="UFormMain.pas">
             <Form>fFormMain</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -135,7 +134,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\Params.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\Bin\Params.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Params.exe</RemoteName>
                         <Overwrite>true</Overwrite>
